<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/profile_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="32dp"
            android:paddingBottom="4dp"
            android:text="@string/registration_birthday"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/profile_birthday_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_birthday"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingEnd="32dp"
            android:text="30.07.1996"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_city"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_birthday_data"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/profile_city_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Москва"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_city"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingEnd="32dp" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_email"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_city_data"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/profile_email_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tatyanabulakhova@yandex.ru"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_email"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingEnd="32dp" />

        <TextView
            android:id="@+id/profile_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_skills"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_email_data"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/profile_skill_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Английский язык"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_skill"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingEnd="32dp" />

        <TextView
            android:id="@+id/profile_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="О себе"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_skill_data"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/profile_about_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Люблю изучать иностранные языки, заниматься йогой и смотреть хоррор-фильмы!"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/profile_about"
            android:paddingStart="32dp"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            android:paddingEnd="32dp" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>